# neuroevolution_games

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: config-feedforward.txt  config-feedforward.yaml
model/: winner_model.pkl
other_games/: flappy_evolution.py  lunar_neat.py
src/: OptimizationEngine.py  app.py  flappy_evolution.py  lunar_neat.py
