[project]
name = "neuroevolution-games"
version = "0.1.0"
description = "Neuroevolution experiments with games: Flappy Bird and LunarLander"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "neat-python>=1.1.0",
    "numpy>=2.3.5",
    "pyyaml>=6.0",
    "scipy>=1.15.0",
    "streamlit>=1.42.0",
    "swig>=4.4.0",
]

[project.optional-dependencies]
other-games = [
    "gymnasium[box2d]>=1.2.2",
    "pygame-ce>=2.5.0",
]

[tool.uv.extra-build-dependencies]
pygame = ["setuptools<70"]
box2d-py = ["swig", "setuptools"]
